# schlagwetter

./: LICENSE
.github/workflows/: extract_from_docker.yml
arduino/: platformio.ini
arduino/src/: main.cpp
server/: .env  Cargo.toml
server/docker/armv7/: Dockerfile
server/migrations/2021-02-22-182823_add_measurements/: down.sql  up.sql
server/src/: api_handler.rs  domain.rs  lib.rs  repo.rs  schema.rs
web/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
web/src/: index.html  styles.sass
web/src/app/: app.component.html  app.component.sass  app.component.spec.ts  app.component.ts  app.module.ts
web/src/app/state/: domain.ts  measurements.state.ts
