[package]
name = "schlagwetter-server"
version = "0.1.1"
authors = ["Juri Berlanda <juriberlanda@hotmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
endian_trait = "0.6.0"
serialport = {version = "4.0.1", default-features = false}
serde = "1.0.130"
serde_derive = "1.0.130"
regex = "1.5.4"
chrono = { version = "0.4.19", features = ["serde"] }
aes = "0.7.5"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = [
    "diesel_postgres_pool",
    "json",
]

[lib]
name = "schlagwetter"
